--- a/assets/css/setting.miracles.css
+++ b/assets/css/setting.miracles.css
@@ -1,1 +1,191 @@
-@charset 'utf-8';:root{--theme-color:#4D90FE}body{width:100%;background:#fcfcfc;font-family:'Noto Sans SC',sans-serif}hr{border:none;border-bottom:1px solid #dcdcdc;margin:30px 0}.miracles-pannel{background:rgba(90,90,90,.8);border-radius:5px;padding:28px 30px;margin:40px 0;margin-top:10px;color:#fff;box-shadow:0 2px 8px #ddd;-moz-box-shadow:0 2px 8px #ddd;-webkit-box-shadow:0 2px 8px #ddd}.miracles-pannel a{color:#fafafa;position:relative}.miracles-pannel a:hover{text-decoration:none}.miracles-pannel a::before{content:'';position:absolute;bottom:0;left:0;right:0;height:2px;background-color:#fafafa;transform-origin:bottom right;transform:scaleX(0);transition:transform .5s ease}.miracles-pannel a:hover::before{transform-origin:bottom left;transform:scaleX(1)}.miracles-backup-alert{transition:all .2s;position:fixed;top:0;left:0;right:0;padding:15px 0;background:#4d90fe;text-align:center}.miracles-backup-alert,.miracles-backup-alert a{color:#fff}.miracles-backup-button{margin:15px 0;margin-bottom:0;padding:6px 10px;border-radius:2px;color:#fff;background:#646464;box-shadow:0 1px 1px #000;-moz-box-shadow:0 1px 1px #000;-webkit-box-shadow:0 1px 1px #000;border:none}[action="?MiraclesBackup"]{margin-top:-10px}.miracles-para-attention{padding:10px 12px;background:red;color:#fff;border-radius:3px}iframe.miracles-news{width:100%;border:none;height:60px;margin:0 -8px;margin-top:-5px}::-webkit-scrollbar{width:6px;height:5px}::-webkit-scrollbar-button{display:none}::-webkit-scrollbar-thumb{background:gray}.typecho-head-nav{box-shadow:0 0 30px #ddd;-moz-box-shadow:0 0 30px #ddd;-webkit-box-shadow:0 0 30px #ddd;padding:15px 0;font-size:15px;position:fixed;top:0;left:0;right:0}.typecho-page-title{visibility:hidden;margin-top:90px}.typecho-option .btn,.typecho-option li input,.typecho-option li select,.typecho-option li textarea{border-radius:4px;background:#fff;padding:10px 12px;box-shadow:0 1px 5px #ddd;-moz-box-shadow:0 1px 5px #ddd;-webkit-box-shadow:0 1px 5px #ddd;border-color:#ddd}.typecho-option li select{padding:0 4px;min-width:100px}.typecho-option li textarea{resize:none;height:160px!important}.typecho-option li .typecho-label{font-size:15px;letter-spacing:1px;margin:15px 0;margin-top:20px}.typecho-option .btn{display:block;width:100%;margin:25px 0;height:50px;text-align:center;background:var(--theme-color);font-size:18px}@media (min-width:768px){.typecho-option-tabs{margin-left:122px}}@media (min-width:992px){.typecho-option-tabs{margin-left:160px}}@media (min-width:1200px){.typecho-option-tabs{margin-left:194px}}
+@charset 'utf-8';
+
+:root {
+	--theme-color: #4D90FE;
+}
+
+body {
+	width: 100%;
+	background: #fcfcfc;
+	font-family: 'Noto Sans SC',sans-serif;
+}
+
+hr {
+	margin: 30px 0;
+	border: none;
+	border-bottom: 1px solid #dcdcdc;
+}
+
+.miracles-pannel {
+	margin: 40px 0;
+	margin-top: 10px;
+	padding: 28px 30px;
+	border-radius: 5px;
+	background: rgba(90,90,90,.8);
+	-webkit-box-shadow: 0 2px 8px #ddd;
+	-moz-box-shadow: 0 2px 8px #ddd;
+	box-shadow: 0 2px 8px #ddd;
+	color: #fff;
+}
+
+.miracles-pannel a {
+	position: relative;
+	color: #fafafa;
+}
+
+.miracles-pannel a:hover {
+	text-decoration: none;
+}
+
+.miracles-pannel a::before {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	height: 2px;
+	background-color: #fafafa;
+	content: '';
+	transition: transform .5s ease;
+	transform: scaleX(0);
+	transform-origin: bottom right;
+}
+
+.miracles-pannel a:hover::before {
+	transform: scaleX(1);
+	transform-origin: bottom left;
+}
+
+.miracles-backup-alert {
+	position: fixed;
+	top: 0;
+	right: 0;
+	left: 0;
+	padding: 15px 0;
+	background: #4d90fe;
+	text-align: center;
+	transition: all .2s;
+}
+
+.miracles-backup-alert,.miracles-backup-alert a {
+	color: #fff;
+}
+
+.miracles-backup-button {
+	margin: 15px 0;
+	margin-bottom: 0;
+	padding: 6px 10px;
+	border: none;
+	border-radius: 2px;
+	background: #646464;
+	-webkit-box-shadow: 0 1px 1px #000;
+	-moz-box-shadow: 0 1px 1px #000;
+	box-shadow: 0 1px 1px #000;
+	color: #fff;
+}[action="?MiraclesBackup"] {
+	margin-top: -10px;
+}
+
+.miracles-para-attention {
+	padding: 10px 12px;
+	border-radius: 3px;
+	background: red;
+	color: #fff;
+}
+
+iframe.miracles-news {
+	margin: 0 -8px;
+	margin-top: -5px;
+	width: 100%;
+	height: 60px;
+	border: none;
+}
+
+::-webkit-scrollbar {
+	width: 6px;
+	height: 5px;
+}
+
+::-webkit-scrollbar-button {
+	display: none;
+}
+
+::-webkit-scrollbar-thumb {
+	background: gray;
+}
+
+.typecho-head-nav {
+	position: fixed;
+	top: 0;
+	right: 0;
+	left: 0;
+	padding: 15px 0;
+	-webkit-box-shadow: 0 0 30px #ddd;
+	-moz-box-shadow: 0 0 30px #ddd;
+	box-shadow: 0 0 30px #ddd;
+	font-size: 15px;
+}
+
+.typecho-page-title {
+	visibility: hidden;
+	margin-top: 90px;
+}
+
+.typecho-option .btn,.typecho-option li input,.typecho-option li select,.typecho-option li textarea {
+	padding: 10px 12px;
+	border-color: #ddd;
+	border-radius: 4px;
+	background: #fff;
+	-webkit-box-shadow: 0 1px 5px #ddd;
+	-moz-box-shadow: 0 1px 5px #ddd;
+	box-shadow: 0 1px 5px #ddd;
+	outline: none;
+}
+
+.typecho-option li select {
+	padding: 0 4px;
+	min-width: 100px;
+}
+
+.typecho-option li textarea {
+	height: 160px!important;
+	resize: none;
+}
+
+.typecho-option li .typecho-label {
+	margin: 15px 0;
+	margin-top: 20px;
+	letter-spacing: 1px;
+	font-size: 15px;
+}
+
+.typecho-option .btn {
+	width: 100%;
+	display: block;
+	height: 50px;
+	background: #000;
+	text-align: center;
+	font-size: 18px;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	border-radius: 0;
+}
+
+@media (min-width:768px) {
+	.typecho-option-tabs {
+		margin-left: 122px;
+	}
+}
+
+@media (min-width:992px) {
+	.typecho-option-tabs {
+		margin-left: 160px;
+	}
+}
+
+@media (min-width:1200px) {
+	.typecho-option-tabs {
+		margin-left: 194px;
+	}
+}
