--- a/assets/css/main/nav.css
+++ b/assets/css/main/nav.css
@@ -19,12 +19,16 @@
 	z-index: 10;
 	transition: all .2s;
 }
-.nav-aero{
+.nav-aero {
     background : transparent !important;
     box-shadow : none !important;
     backdrop-filter: none;
     -webkit-backdrop-filter: none;
 }
+.nav-aero .nav-icon-button {
+	background: rgba(255,255,255,0.1);
+}
+
 .nav-content {
 	margin: 0;
 	display: table-cell;
@@ -255,6 +259,16 @@
 .login-form button {
 	width: 260px;
 }
+.login-enter-admin {
+	text-align: center;
+}
+.login-enter-admin a {
+	padding: 12px 16px;
+	border-radius: 3px;
+	background: rgb(240,240,240);
+	margin-top: 10px;
+	
+}
 /* Menu */
 .mobile-menu-pagelist a {
 	display: block;
@@ -306,6 +320,7 @@
 	display: block;
 	margin: 10px 0;
 	padding: 15px 20px;
+	outline: none;
 }
 .login-form input {
 	border-radius: 5px;
@@ -314,8 +329,7 @@
 .login-form button {
 	border-radius: 5px;
 	border: none;
-	color: white;
-	background: var(--theme-color);
+	background: rgb(240,240,240);
 }
 /* Alert if need-fresh */
 .login-form.need-refresh:before {
