--- a/assets/css/main/comment.css
+++ b/assets/css/main/comment.css
@@ -254,7 +254,8 @@
 	margin-left: 0!important
 }
 .comment-hidden {
-	margin: 60px 0;
+	margin: 0;
+	margin-top: 20px;
 	background: #f1f1f1;
 	padding: 20px;
 	text-align: center;
