🔨 Fix: typecho 原生编辑器在小屏幕上按钮显示不完整

--- a/assets/css/setting.miracles.css
+++ b/assets/css/setting.miracles.css
@@ -172,6 +172,10 @@ iframe.miracles-news {
 	border-radius: 0;
 }
 
+.wmd-button-row {
+	height: auto!important
+}
+
 @media (min-width:768px) {
 	.typecho-option-tabs {
 		margin-left: 122px;
