--- a/assets/css/main/special.css
+++ b/assets/css/main/special.css
@@ -12,6 +12,7 @@
 	background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 50%;
+	background-color: #f1f1f1
 }
 .banner-mask {
 	width: 100%;
