--- a/assets/css/main/element.css
+++ b/assets/css/main/element.css
@@ -13,6 +13,7 @@ html {
 body {
   margin: 0;
 }
+
 main {
   display: block;
 }
@@ -170,6 +171,7 @@ body,html {
 	overflow: auto;
 	transition: background 0.2s;
 	width: 100%;
+	scroll-behavior: smooth;
 }
 body {
 	font-family: 'Noto Sans SC',sans-serif;
