--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -12,13 +12,13 @@
 	transition: .8s;
 }
 .post-item {
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 }
 .post-body,.post-item,.saying-item,#comment-form {
 	background: #fff;
-	box-shadow: 0 0 36px var(--shadow-color);
-	-moz-box-shadow: 0 0 36px var(--shadow-color);
-	-webkit-box-shadow: 0 0 36px var(--shadow-color);
+	box-shadow: 0 2px 10px var(--shadow-color);
+	-moz-box-shadow: 0 2px 10px var(--shadow-color);
+	-webkit-box-shadow: 0 2px 10px var(--shadow-color);
 	transition: background .1s
 }
 .post-banner-box {
@@ -104,6 +104,17 @@
 	color: rgb(200,200,200);
 	font-size: 25px;
 }
+.post-toc-link {
+	color: gray;
+	opacity: 0;
+	transition: .3s;
+	margin-left: 10px;
+}
+.post-content h2:hover .post-toc-link,
+.post-content h3:hover .post-toc-link {
+	opacity: 1
+}
+
 /* >文章内容 */
 .post-content,
 .saying-inner {
@@ -123,24 +134,24 @@
 	margin: 45px 0;
 	margin-bottom: 10px;
 }
-.post-content h3:before {
-	content: '# ';
-	color: var(--theme-color);
-	font-weight: bold;
+.post-content h3 {
+	border-left: 6px solid #4D90FE;
+	padding-left: 10px;
 }
 .post-content hr {
 	display: block;
-	margin: 65px auto;
-	width: 250px;
-	border: 3px dashed #f0f0f0
+	margin: 20px auto;
+	width: 100%;
+	border: 2px dashed #f1f1f1
 }
 .post-content code {
-	font-size: 0.8em;
+	font-size: 0.95em;
 	background: #f0f0f0;
-	border-radius: 3px;
+	border-radius: 2px;
 	font-family: 'Noto Sans SC',sans-serif!important;
-	color: var(--theme-color);
-	vertical-align: middle;
+	color: gray;
+	padding: 0 4px;
+	margin: 0 1px;
 }
 .post-content pre>code {
 	background: #282c34!important;
@@ -157,10 +168,10 @@
 	margin: 0
 }
 .post-content blockquote {
-	border-left: 6px solid #ddd;
+	border-left: 5px solid #ddd;
 	padding-left: 10px;
 	margin-left: 0;
-	color: gray
+	color: rgb(70,70,70);
 }
 .post-content table {
 	width: 100%;
@@ -181,7 +192,7 @@
 }
 .post-content a:not(.no-line) {
 	position: relative;
-	color: var(--theme-color);
+	color: #000;
 	border-bottom: 2px solid #f0f0f0;
 }
 .post-content a:not(.no-line)::before {
@@ -191,7 +202,7 @@
 	left: 0;
 	right: 0;
 	height: 2px;
-	background-color: var(--theme-color);
+	background-color: #000;
 	transform-origin: bottom right;
 	transform: scaleX(0);
 	transition: transform .5s ease
@@ -233,23 +244,22 @@
     justify-content: center;
 }
 
-.post-content .protected .word {
-	display: none;
+.post-content .protected .word:after {
+	content:"：";
 }
 
 .post-content .protected .text {
-    border-top-left-radius: 6px;
-	border-bottom-left-radius: 6px;
+    border-top-left-radius: 3px;
+	border-bottom-left-radius: 3px;
 	margin-right: -7px;
 }
 
 .post-content .protected .submit {
-	border-top-right-radius: 6px;
-	border-bottom-right-radius: 6px;
+	border-top-right-radius: 3px;
+	border-bottom-right-radius: 3px;
 	margin-left: -7xp;
-	background: var(--theme-color);
-	border-color: var(--theme-color)!important;
-	color: #fff;
+	color: rgb(80,80,80);
+	background: rgb(237,237,237);
 	cursor: pointer;
 }
 
@@ -261,12 +271,12 @@
 .post-content .protected .text {
 	border: 1px solid #ccc;
 	padding: 8px 14px;
-	box-shadow: 0 2px 10px #ddd;
+	box-shadow: 0 1px 4px #ddd;
 	transition: .3s;
 }
 
 .post-content .protected {
-	margin: 50px 0;
+	margin: 20px 0;
 }
 
 /* >短代码 */
@@ -274,10 +284,11 @@
 	border: 1px solid rgb(235,235,235);
 	border-radius: 3px;
 	padding: 15px;
-	border-left: 5px solid var(--theme-color);
+	border-left: 5px solid gray;
 }
 .tip-icon {
-	color: var(--theme-color);
+	color: gray;
+	display: none/*移动端不显示*/
 }
 .tip.red {
 	border-left-color: #DD4B39;
